src/objects/IntegrationEndpoint__mdt.object
<CustomObject>
    <description>Used to configure integrations</description>
    <fields>
        <fullName>EndpointAddress__c</fullName>
        <description>Address of the integration endpoint</description>
        <label>Endpoint Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checkbox turning the integration on/off</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLogActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating whether an integration log will be saved for the integration.</description>
        <label>IsLogActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Integration Endpoint</label>
    <pluralLabel>Integration Endpoints</pluralLabel>
</CustomObject>